server/componentes/antlr4/.antlr/PortuguesPuroParser.java
// Generated from e:/POP-LSP/server/componentes/antlr4/PortuguesPuro.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PortuguesPuroParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, T__116=117, T__117=118, T__118=119, 
		T__119=120, T__120=121, T__121=122, T__122=123, T__123=124, T__124=125, 
		T__125=126, T__126=127, T__127=128, T__128=129, T__129=130, T__130=131, 
		T__131=132, T__132=133, T__133=134, T__134=135, T__135=136, T__136=137, 
		T__137=138, T__138=139, T__139=140, T__140=141, T__141=142, T__142=143, 
		T__143=144, T__144=145, T__145=146, T__146=147, T__147=148, T__148=149, 
		T__149=150, T__150=151, T__151=152, T__152=153, T__153=154, T__154=155, 
		T__155=156, T__156=157, T__157=158, T__158=159, T__159=160, T__160=161, 
		T__161=162, T__162=163, T__163=164, T__164=165, T__165=166, T__166=167, 
		T__167=168, T__168=169, T__169=170, T__170=171, T__171=172, T__172=173, 
		T__173=174, T__174=175, T__175=176, T__176=177, T__177=178, T__178=179, 
		T__179=180, T__180=181, T__181=182, LETRA=183, DIGITO=184, SIMBOLO=185, 
		ESPACO=186, APOSTROFO=187, ASPAS_DUPLAS=188, HIFEN=189, CIFRAO=190, ESPACO_EM_BRANCO=191, 
		ESPACO_RIGIDO=192, QUEBRA_DE_LINHA=193, BARRA_INCLINADA=194, BARRA_INVERTIDA=195, 
		SINAL_DE_ADICAO=196, PONTO=197, VIRGULA=198, PONTO_E_VIRGULA=199, DOIS_PONTOS=200, 
		ABRE_PARENTESES=201, FECHA_PARENTESES=202, ABRE_COLCHETES=203, FECHA_COLCHETES=204, 
		CARACTERES_IMPRIMIVEIS=205, CARACTERES_DE_CONTROLE=206;
	public static final int
		RULE_regra_espaco = 0, RULE_palavra = 1, RULE_possessivo_inglês = 2, RULE_artigo = 3, 
		RULE_artigo_definido = 4, RULE_artigo_indefinido = 5, RULE_adjacentes = 6, 
		RULE_abrangentes = 7, RULE_contracoes = 8, RULE_atribuidores_de_posse = 9, 
		RULE_p1 = 10, RULE_p2 = 11, RULE_operadores_de_comparacao = 12, RULE_palavras_reservadas = 13, 
		RULE_denominacoes = 14, RULE_verbos = 15, RULE_caracteres_ignoraveis = 16, 
		RULE_comentario = 17, RULE_comentario_de_linha = 18, RULE_comentario_de_bloco = 19, 
		RULE_token = 20, RULE_aglomerado = 21, RULE_caractere_aglomeravel = 22, 
		RULE_iniciador_de_aglomerado = 23, RULE_possessivo_novo = 24, RULE_qualificador = 25, 
		RULE_caractere_nao_aglomeravel = 26, RULE_sinal_de_pontuacao = 27, RULE_simbolos_especiais = 28, 
		RULE_noise = 29, RULE_numero_inteiro = 30, RULE_numero_decimal = 31, RULE_numero_fracionario = 32, 
		RULE_numero_misto = 33, RULE_numero_hexadecimal = 34, RULE_string_literal = 35, 
		RULE_programa = 36, RULE_tipos_primitivos = 37, RULE_tipo = 38, RULE_nome = 39, 
		RULE_nome_do_tipo = 40, RULE_informacao_opcional = 41, RULE_campos = 42, 
		RULE_bytes = 43, RULE_referência = 44, RULE_campo = 45, RULE_pausa = 46, 
		RULE_pausas = 47, RULE_conjuncoes = 48, RULE_preposicoes = 49, RULE_é = 50, 
		RULE_estrutura = 51, RULE_igual_a = 52, RULE_variavel_global = 53, RULE_rotina = 54, 
		RULE_procedimento = 55, RULE_determine_se = 56, RULE_decisor = 57, RULE_função2 = 58, 
		RULE_atribua = 59, RULE_funcao = 60, RULE_para = 61, RULE_que_se = 62, 
		RULE_rotina2 = 63, RULE_compativelmente = 64, RULE_retroinvocacao = 65, 
		RULE_nome_da_rotina = 66, RULE_unidade_semantica = 67, RULE_parametro = 68, 
		RULE_frase = 69, RULE_instrucoes = 70, RULE_instrucao = 71, RULE_preserve = 72, 
		RULE_preservacao = 73, RULE_iteracao = 74, RULE_se = 75, RULE_condicional = 76, 
		RULE_expressao_decisora = 77, RULE_incondicional = 78, RULE_interrupcao = 79, 
		RULE_invocacao = 80, RULE_invocacao_interna = 81, RULE_invocacao_externa = 82, 
		RULE_aspas_duplas = 83, RULE_nome_da_DLL = 84, RULE_nome_da_funcao = 85, 
		RULE_processe = 86, RULE_com = 87, RULE_e = 88, RULE_retornando = 89, 
		RULE_invocacao_indireta = 90, RULE_retorno = 91, RULE_decodifique = 92, 
		RULE_decodificacao = 93, RULE_aponte = 94, RULE_para_rotina = 95, RULE_indirecao = 96, 
		RULE_push = 97, RULE_empilhamento = 98, RULE_reiteracao = 99, RULE_diga = 100, 
		RULE_retorno_booleano = 101, RULE_expressão = 102, RULE_operadores_comuns = 103, 
		RULE_booleano = 104, RULE_nulo = 105, RULE_termo_constante = 106, RULE_termo_constante_negativo = 107, 
		RULE_termo_constante_positivo = 108, RULE_numero = 109, RULE_literal = 110, 
		RULE_termo = 111, RULE_sinal_de_divisão = 112, RULE_como = 113, RULE_termo_negativo = 114, 
		RULE_termo_positivo = 115, RULE_variavel_local = 116, RULE_variavel = 117, 
		RULE_termo_literal = 118, RULE_conteúdo = 119, RULE_magnitude = 120, RULE_endereçamento = 121, 
		RULE_possessivos_inglês = 122, RULE_possessivo_inglês_antigo = 123, RULE_possessivo_português = 124, 
		RULE_apostrofo = 125;
	private static String[] makeRuleNames() {
		return new String[] {
			"regra_espaco", "palavra", "possessivo_inglês", "artigo", "artigo_definido", 
			"artigo_indefinido", "adjacentes", "abrangentes", "contracoes", "atribuidores_de_posse", 
			"p1", "p2", "operadores_de_comparacao", "palavras_reservadas", "denominacoes", 
			"verbos", "caracteres_ignoraveis", "comentario", "comentario_de_linha", 
			"comentario_de_bloco", "token", "aglomerado", "caractere_aglomeravel", 
			"iniciador_de_aglomerado", "possessivo_novo", "qualificador", "caractere_nao_aglomeravel", 
			"sinal_de_pontuacao", "simbolos_especiais", "noise", "numero_inteiro", 
			"numero_decimal", "numero_fracionario", "numero_misto", "numero_hexadecimal", 
			"string_literal", "programa", "tipos_primitivos", "tipo", "nome", "nome_do_tipo", 
			"informacao_opcional", "campos", "bytes", "referência", "campo", "pausa", 
			"pausas", "conjuncoes", "preposicoes", "é", "estrutura", "igual_a", "variavel_global", 
			"rotina", "procedimento", "determine_se", "decisor", "função2", "atribua", 
			"funcao", "para", "que_se", "rotina2", "compativelmente", "retroinvocacao", 
			"nome_da_rotina", "unidade_semantica", "parametro", "frase", "instrucoes", 
			"instrucao", "preserve", "preservacao", "iteracao", "se", "condicional", 
			"expressao_decisora", "incondicional", "interrupcao", "invocacao", "invocacao_interna", 
			"invocacao_externa", "aspas_duplas", "nome_da_DLL", "nome_da_funcao", 
			"processe", "com", "e", "retornando", "invocacao_indireta", "retorno", 
			"decodifique", "decodificacao", "aponte", "para_rotina", "indirecao", 
			"push", "empilhamento", "reiteracao", "diga", "retorno_booleano", "expressão", 
			"operadores_comuns", "booleano", "nulo", "termo_constante", "termo_constante_negativo", 
			"termo_constante_positivo", "numero", "literal", "termo", "sinal_de_divisão", 
			"como", "termo_negativo", "termo_positivo", "variavel_local", "variavel", 
			"termo_literal", "conteúdo", "magnitude", "endereçamento", "possessivos_inglês", 
			"possessivo_inglês_antigo", "possessivo_português", "apostrofo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "' '", "'o'", "'a'", "'os'", "'as'", "'um'", "'uma'", "'uns'", 
			"'umas'", "'este'", "'esta'", "'estes'", "'estas'", "'esse'", "'essa'", 
			"'esses'", "'essas'", "'ao'", "'\\u00E0'", "'aos'", "'\\u00E0s'", "'no'", 
			"'na'", "'nos'", "'nas'", "'pelo'", "'pela'", "'pelos'", "'pelas'", "'num'", 
			"'numa'", "'nuns'", "'numas'", "'dum'", "'duma'", "'duns'", "'dumas'", 
			"'desse'", "'dessa'", "'desses'", "'dessas'", "'deste'", "'desta'", "'destes'", 
			"'destas'", "'igual a'", "'diferente de'", "'maior que'", "'maior do que'", 
			"'maior ou igual a'", "'menor que'", "'menor do que'", "'menor ou igual a'", 
			"'Se'", "'Itere'", "'Reitere'", "'Pare'", "'Retorne'", "'Preserve'", 
			"'Diga'", "'sim'", "'n\\u00E3o'", "'original'", "'Decodifique'", "'Processe'", 
			"'retornando'", "'Push'", "'Pop'", "'nulo'", "'vazio'", "'inexistente'", 
			"'denominado'", "'denominada'", "'denominados'", "'denominadas'", "'chamado'", 
			"'chamada'", "'chamados'", "'chamadas'", "'\\u00E9'", "'est\\u00E1'", 
			"'estiver'", "'for'", "'forem'", "'s\\u00E3o'", "'est\\u00E3o'", "'estiverem'", 
			"'ser'", "'serem'", "'estar'", "'poder'", "'puder'", "'foi'", "'estamos'", 
			"'h\\u00E1'", "'pode'", "'existe'", "'existir'", "'cont\\u00E9m'", "'contiver'", 
			"'possui'", "'possuir'", "'~'", "'@'", "'#'", "'%'", "'_'", "'&'", "'!'", 
			"'?'", "'|'", "'*'", "'^'", "'<'", "'>'", "'{'", "'}'", "'byte'", "'caractere'", 
			"'word'", "'n\\u00FAmero'", "'sinalizador'", "'ponteiro'", "'estrutura'", 
			"'string'", "'subtexto'", "'texto hexadecimal'", "'lista'", "'lista estruturada'", 
			"'listas'", "'propor\\u00E7\\u00E3o'", "'fra\\u00E7\\u00E3o'", "'numerador'", 
			"'denominador'", "'bytes'", "'(refer\\u00EAncia)'", "'sob'", "'e'", "'ou'", 
			"'nem'", "'usando'", "'com'", "'por'", "'contendo'", "'desde'", "'entre'", 
			"'sobre'", "'cima'", "'embaixo'", "'abaixo'", "'antes'", "'depois'", 
			"'ap\\u00F3s'", "'cerca'", "'pr\\u00F3ximo'", "'at\\u00E9'", "'aproximadamente'", 
			"'como'", "'determine se'", "'Fun\\u00E7\\u00E3o'", "'atribua'", "'para'", 
			"'que se'", "'Rotina'", "'compativelmente'", "'Itere.'", "'Aponte'", 
			"'para a rotina'", "'Empilhe'", "'mais'", "'menos'", "'vezes'", "'multiplicado por'", 
			"'dividido por'", "'junto com'", "'seguido de'", "'acompanhado de'", 
			"'tal como'", "'conte\\u00FAdo'", "'magnitude'", "'endere\\u00E7amento'", 
			"''s'", null, null, null, null, "'''", "'\\\"'", "'-'", "'$'", null, 
			"'\\u00A0'", null, "'/'", "'\\'", "'+'", "'.'", "','", "';'", "':'", 
			"'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "LETRA", "DIGITO", "SIMBOLO", "ESPACO", "APOSTROFO", 
			"ASPAS_DUPLAS", "HIFEN", "CIFRAO", "ESPACO_EM_BRANCO", "ESPACO_RIGIDO", 
			"QUEBRA_DE_LINHA", "BARRA_INCLINADA", "BARRA_INVERTIDA", "SINAL_DE_ADICAO", 
			"PONTO", "VIRGULA", "PONTO_E_VIRGULA", "DOIS_PONTOS", "ABRE_PARENTESES", 
			"FECHA_PARENTESES", "ABRE_COLCHETES", "FECHA_COLCHETES", "CARACTERES_IMPRIMIVEIS", 
			"CARACTERES_DE_CONTROLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PortuguesPuro.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PortuguesPuroParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Regra_espacoContext extends ParserRuleContext {
		public Regra_espacoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regra_espaco; }
	}

	public final Regra_espacoContext regra_espaco() throws RecognitionException {
		Regra_espacoContext _localctx = new Regra_espacoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_regra_espaco);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(252);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PalavraContext extends ParserRuleContext {
		public List<TerminalNode> CARACTERES_IMPRIMIVEIS() { return getTokens(PortuguesPuroParser.CARACTERES_IMPRIMIVEIS); }
		public TerminalNode CARACTERES_IMPRIMIVEIS(int i) {
			return getToken(PortuguesPuroParser.CARACTERES_IMPRIMIVEIS, i);
		}
		public PalavraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palavra; }
	}

	public final PalavraContext palavra() throws RecognitionException {
		PalavraContext _localctx = new PalavraContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_palavra);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(255); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(254);
					match(CARACTERES_IMPRIMIVEIS);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(257); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Possessivo_inglêsContext extends ParserRuleContext {
		public PalavraContext palavra() {
			return getRuleContext(PalavraContext.class,0);
		}
		public TerminalNode APOSTROFO() { return getToken(PortuguesPuroParser.APOSTROFO, 0); }
		public Possessivo_inglêsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_possessivo_inglês; }
	}

	public final Possessivo_inglêsContext possessivo_inglês() throws RecognitionException {
		Possessivo_inglêsContext _localctx = new Possessivo_inglêsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_possessivo_inglês);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(259);
			palavra();
			setState(260);
			match(APOSTROFO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArtigoContext extends ParserRuleContext {
		public Artigo_definidoContext artigo_definido() {
			return getRuleContext(Artigo_definidoContext.class,0);
		}
		public Artigo_indefinidoContext artigo_indefinido() {
			return getRuleContext(Artigo_indefinidoContext.class,0);
		}
		public ArtigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_artigo; }
	}
